Adds `ny_taxi_zones` source to `borough_pair_analysis` model for NYC Taxi data analysis

--- a/prophecy-sources/sources.yml
+++ b/prophecy-sources/sources.yml
@@ -92,3 +92,92 @@ sources:
     - name: "service_zone"
       dataType:
         type: "String"
+  - name: "ny_taxi_zones"
+    columns:
+    - name: "VendorID"
+      dataType:
+        type: "Integer"
+    - name: "pickup_datetime"
+      dataType:
+        type: "Timestamp"
+    - name: "dropoff_datetime"
+      dataType:
+        type: "Timestamp"
+    - name: "passenger_count"
+      dataType:
+        type: "Bigint"
+    - name: "trip_distance"
+      dataType:
+        type: "Double"
+    - name: "RatecodeID"
+      dataType:
+        type: "Bigint"
+    - name: "store_and_fwd_flag"
+      dataType:
+        type: "String"
+    - name: "PULocationID"
+      dataType:
+        type: "Integer"
+    - name: "PUBorough"
+      dataType:
+        type: "String"
+    - name: "PUZone"
+      dataType:
+        type: "String"
+    - name: "PUservice_zone"
+      dataType:
+        type: "String"
+    - name: "DOLocationID"
+      dataType:
+        type: "Integer"
+    - name: "DOBorough"
+      dataType:
+        type: "String"
+    - name: "DOZone"
+      dataType:
+        type: "String"
+    - name: "DOservice_zone"
+      dataType:
+        type: "String"
+    - name: "payment_type"
+      dataType:
+        type: "Bigint"
+    - name: "fare_amount"
+      dataType:
+        type: "Double"
+    - name: "extra"
+      dataType:
+        type: "Double"
+    - name: "mta_tax"
+      dataType:
+        type: "Double"
+    - name: "tip_amount"
+      dataType:
+        type: "Double"
+    - name: "tolls_amount"
+      dataType:
+        type: "Double"
+    - name: "improvement_surcharge"
+      dataType:
+        type: "Double"
+    - name: "total_amount"
+      dataType:
+        type: "Double"
+    - name: "congestion_surcharge"
+      dataType:
+        type: "Double"
+    - name: "taxi_type"
+      dataType:
+        type: "String"
+    - name: "year"
+      dataType:
+        type: "String"
+    - name: "month"
+      dataType:
+        type: "String"
+    - name: "pickup_date"
+      dataType:
+        type: "Date"
+    - name: "dropoff_date"
+      dataType:
+        type: "Date"
